[workspace]
members = [
  "src/token/api",
  "src/token/impl",
  "src/factory",
]

[workspace.package]
version = "1.10.35"
edition = "2021"

[workspace.dependencies]
# FIXME
canister-sdk = { git = "https://github.com/GraDKh/canister-sdk", package = "canister-sdk", branch = "EPROD_192_query_historical_data" }
ic-exports = { git = "https://github.com/GraDKh/canister-sdk", package = "ic-exports", branch = "EPROD_192_query_historical_data" }
ic-stable-structures = { git = "https://github.com/GraDKh/canister-sdk", branch = "EPROD_192_query_historical_data" }
